modules/gdscript/tests/scripts/analyzer/errors/transform3d_index_int.gd
func test():
	var t: Transform3D = Transform3D()
	print(t[0])
